added basic nav for About and Store links also added basic styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Google-Homepage</title>
 </head>
 <body>
+    <nav class="nav-wrapper">
+        <div class="nav-left">
+            <a href="#">About</a>
+            <a href="#">Store</a>
+        </div>
+    </nav>
     
 </body>
 </html>
